@@ -93,10 +93,16 @@ else
 	$ng = $_POST['ng'];
 $SESSION->save('cslng', $ng);
 
+if(!isset($_POST['d']))
+	$SESSION->restore('csld', $d);
+else
+	$d = $_POST['d'];
+$SESSION->save('csld', $d);
+
 if(isset($_GET['search']))
 {
 	$layout['pagetitle'] = trans('Customer Search Results');
-	$customerlist = $LMS->GetCustomerList($o, $s, $n, $g, $customersearch, NULL, $k, $ng);
+	$customerlist = $LMS->GetCustomerList($o, $s, $n, $g, $customersearch, NULL, $k, $ng, $d);
 	
 	$listdata['total'] = $customerlist['total'];
 	$listdata['direction'] = $customerlist['direction'];
@@ -107,6 +113,7 @@ if(isset($_GET['search']))
 	$listdata['network'] = $n;
 	$listdata['customergroup'] = $g;
 	$listdata['nodegroup'] = $ng;
+	$listdata['division'] = $d;
 
 	unset($customerlist['total']);
 	unset($customerlist['state']);
@@ -154,6 +161,7 @@ else
 	$SMARTY->assign('customergroups', $LMS->CustomergroupGetAll());
 	$SMARTY->assign('nodegroups', $LMS->GetNodeGroupNames());
 	$SMARTY->assign('cstateslist', $LMS->GetCountryStates());
+	$SMARTY->assign('divisions', $DB->GetAll('SELECT id, shortname FROM divisions ORDER BY shortname'));
 	$SMARTY->assign('k', $k);
 	$SMARTY->display('customersearch.html');
 }
